--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://www.dartlang.org/guides/libraries/private-files
 
+# IDE Settings
+.idea
+
 # Files and directories created by pub
 .dart_tool/
 .packages
