--- a/flutter_version/pubspec.yaml
+++ b/flutter_version/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
+  blur: ^3.1.0
+  flutter_expanded_tile: ^0.3.7
+  animations: ^2.0.8
 
 dev_dependencies:
   flutter_test:
