--- a/flutter_version/pubspec.yaml
+++ b/flutter_version/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   blur: ^3.1.0
   flutter_expanded_tile: ^0.3.7
   animations: ^2.0.8
+  flutter_tts: ^3.8.3
 
 dev_dependencies:
   flutter_test:
