--- a/flutter_version/pubspec.yaml
+++ b/flutter_version/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   b: ^0.1.2
   file_saver: ^0.2.9
   file_picker: ^6.1.1
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
