--- a/flutter_version/pubspec.yaml
+++ b/flutter_version/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   file_saver: ^0.2.9
   file_picker: ^6.1.1
   path_provider: ^2.1.1
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
