--- a/Hackfleisch/export_presets.cfg
+++ b/Hackfleisch/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../../../../../../../Downloads/HAC8.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -58,9 +58,9 @@ permissions/access_coarse_location=false
 permissions/access_fine_location=false
 permissions/access_location_extra_commands=false
 permissions/access_mock_location=false
-permissions/access_network_state=false
+permissions/access_network_state=true
 permissions/access_surface_flinger=false
-permissions/access_wifi_state=false
+permissions/access_wifi_state=true
 permissions/account_manager=false
 permissions/add_voicemail=false
 permissions/authenticate_accounts=false
@@ -119,7 +119,7 @@ permissions/install_location_provider=false
 permissions/install_packages=false
 permissions/install_shortcut=false
 permissions/internal_system_window=false
-permissions/internet=false
+permissions/internet=true
 permissions/kill_background_processes=false
 permissions/location_hardware=false
 permissions/manage_accounts=false
